# DM-SQL-to-FalkorDB

./: .dockerignore  .gitignore  Cargo.toml  readme.md
.github/workflows/: release-images.yml  unit-tests.yml
BigQuery-to-FalkorDB/: README.md  bigquery_check.yaml  bigquery_public_data_shakespeare.yaml  bigquery_sample.yaml  tool.manifest.json
BigQuery-to-FalkorDB/bigquery-to-falkordb/: Cargo.toml
BigQuery-to-FalkorDB/bigquery-to-falkordb/src/: config.rs  main.rs  metrics.rs  orchestrator.rs  scaffold.rs  sink_async.rs  source.rs
ClickHouse-to-FalkorDB/: Cargo.toml  clickhouse.event_table.yaml  clickhouse.incremental.yaml  example.file.yaml  readme.md  tool.manifest.json
ClickHouse-to-FalkorDB/src/: config.rs  main.rs  metrics.rs  orchestrator.rs  scaffold.rs  sink_async.rs  source.rs
Databricks-to-FalkorDB/: README.md  databricks_sample_to_falkordb.yaml  tool.manifest.json
Databricks-to-FalkorDB/databricks-to-falkordb/: Cargo.toml
MariaDB-to-FalkorDB/: Cargo.toml  example.file.yaml  mariadb.event_table.yaml  mariadb.incremental.yaml  mariadb_sample_to_falkordb.yaml  readme.md  tool.manifest.json
MariaDB-to-FalkorDB/sample_data/: mariadb-sample-data.sql  mariadb-sample-schema.sql
MariaDB-to-FalkorDB/src/: cdc.rs  config.rs  main.rs  metrics.rs  orchestrator.rs  scaffold.rs  sink_async.rs  source.rs
MySQL-to-FalkorDB/: Cargo.toml  mysql.incremental.yaml  readme.md  tool.manifest.json
MySQL-to-FalkorDB/sample_data/: mysql-sample-schema.sql
MySQL-to-FalkorDB/src/: cdc.rs  config.rs  main.rs  metrics.rs  orchestrator.rs  peek.rs  scaffold.rs  sink_async.rs  source.rs
Oracle-to-FalkorDB/: Cargo.toml  example.file.yaml  example.rows.json  mysql.event_table.yaml  mysql_sample_to_falkordb.yaml  oracle.cdc.yaml  oracle.incremental.yaml  oracle_sample_to_falkordb.yaml  readme.md  tool.manifest.json
Oracle-to-FalkorDB/sample_data/: mysql-sample-data.sql
Oracle-to-FalkorDB/src/: cdc.rs  config.rs  main.rs  metrics.rs  orchestrator.rs  scaffold.rs  sink_async.rs  source.rs
PostgreSQL-to-FalkorDB/: README.md  tool.manifest.json
SQLServer-to-FalkorDB/: Cargo.toml  example.file.yaml  readme.md  sqlserver.event_table.yaml  sqlserver.incremental.yaml  sqlserver_sample_to_falkordb.yaml  tool.manifest.json
SQLServer-to-FalkorDB/src/: config.rs  (+6 more)
Snowflake-to-FalkorDB/: Cargo.toml  README.md  snowflake_stream_example.yaml  tool.manifest.json
Spark-to-FalkorDB/: .gitignore  README.md  spark_to_falkordb_e2e.sample.yaml  spark_to_falkordb_e2e.tables.sample.yaml  tool.manifest.json
control-plane/: .gitignore  Dockerfile
control-plane/server/: Cargo.toml
control-plane/server/migrations/: 0001_init.sql  0002_metrics_snapshots.sql  0003_metrics_snapshots_config_id.sql  0004_runs_execution_backend.sql
control-plane/server/src/: auth.rs  main.rs  metrics.rs  models.rs  runs.rs  scaffold.rs  store.rs  tools.rs
docker/: build-images.sh  runner.Dockerfile
(+67 files in other folders)
