[package]
name = "clickhouse_to_falkordb"
version = "0.1.0"
edition = "2021"
description = "Online migration tool to load and sync ClickHouse data into FalkorDB"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive","env"] }
falkordb = { git = "https://github.com/FalkorDB/falkordb-rs.git", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros","rt-multi-thread","signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

[profile.release]
opt-level = 3
